<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">English-Russian Dictionary</string>
    <string name="welcome">Welcome!</string>
    <string name="explanation">This app installs a dictionary into your SD card. You may always find it in the LearnIt folder. Please press the button below to start copying the dictionary.</string>
    <string name="start_copying">Start copying</string>
    <string name="copying">Please wait. \nThe dictionary is being copied.</string>
    <string name="delete_the_app">Now you can use the dictionary in LearnIt. \nYou won\'t need this app anymore. \nYou may delete it at any time.</string>
    <string name="success">Success</string>
</resources>
